Fixed nav spacing issue

--- a/src/structure/Nav/Nav.scss
+++ b/src/structure/Nav/Nav.scss
@@ -1,4 +1,11 @@
 .container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 60vw;
+
   padding: 30px 0;
   height: 92px;
   position: fixed;
@@ -8,95 +15,101 @@
   transition: all 0.5s;
   z-index: 997;
 
-  #logo {
+  .logo {
     float: left;
-  }
 
-  #logo h1 {
-    font-size: 32px;
-    margin: 0;
-    padding: 6px 0;
-    line-height: 1;
-    font-family: 'Alata', sans-serif;
-    font-weight: 500;
-    letter-spacing: 3px;
-    text-transform: uppercase;
-  }
+    h1 {
+      font-size: 32px;
+      margin: 0;
+      padding: 6px 0;
+      line-height: 1;
+      font-family: 'Alata', sans-serif;
+      font-weight: 500;
+      letter-spacing: 3px;
+      text-transform: uppercase;
+    }
 
-  #logo h1 a,
-  #logo h1 a:hover {
-    text-decoration: none;
-    color: #f7fffd;
+    a,
+    a:hover {
+      text-decoration: none;
+      color: #f7fffd;
+    }
   }
 }
 
-#nav-menu-container {
+.nav-menu-container {
   float: right;
   margin: 0;
+}
 
-  .nav-menu {
-    ul {
-      margin: 4px 0 0 0;
-      border: 1px solid #e7e7e7;
+.nav-menu {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 
-      li {
-        text-decoration: none;
-        margin-left: 10px;
+  ul {
+    position: absolute;
+    display: none;
+    top: 100%;
+    left: 0;
+    z-index: 99;
+    margin: 4px 0 0 0;
+    border: 1px solid #e7e7e7;
+    text-decoration: none;
+  }
 
-        :hover {
-          visibility: visible;
-          -webkit-transform: scaleX(1);
-          transform: scaleX(1);
-        }
+  li {
+    text-decoration: none;
+    margin-left: 10px;
+    float: left;
+    position: relative;
+    white-space: nowrap;
 
-        :first-child {
-          border-top: 0;
-        }
-
-        a {
-          padding: 10px;
-          transition: 0.3s;
-          display: block;
-          font-size: 13px;
-          text-transform: none;
-        }
-
-        a:hover {
-          background: #ffe2e2;
-          color: #fff;
-        }
-      }
+    &:hover {
+      visibility: visible;
+      -webkit-transform: scaleX(1);
+      transform: scaleX(1);
     }
 
-    a {
-      padding: 0 8px 10px 8px;
-      text-decoration: none;
-      display: inline-block;
-      font-family: 'Alata', sans-serif;
-      font-weight: 400;
-      text-transform: uppercase;
-      font-size: 13px;
-      outline: none;
+    &:first-child {
+      border-top: 0;
+    }
+  }
 
-      :before {
-        content: '';
-        position: absolute;
-        width: 100%;
-        height: 2px;
-        bottom: 0;
-        left: 0;
-        background-color: #f67280;
-        visibility: hidden;
-        -webkit-transform: scaleX(0);
-        transform: scaleX(0);
-        transition: all 0.3s ease-in-out 0s;
-      }
+  a {
+    padding: 0 8px 10px 8px;
+    display: inline-block;
+    font-weight: 400;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 0.825rem;
+    outline: none;
+    margin: 0;
+    color: #fff;
+    letter-spacing: 3px;
 
-      :hover:before {
-        visibility: visible;
-        -webkit-transform: scaleX(1);
-        transform: scaleX(1);
-      }
+    &:before {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      bottom: 0;
+      left: 0;
+      background-color: #f67280;
+      visibility: hidden;
+      transform: scaleX(0);
+      transition: all 0.3s ease-in-out 0s;
+    }
+
+    &:hover,
+    &:active,
+    &:focus {
+      cursor: pointer;
+    }
+
+    &:hover:before {
+      visibility: visible;
+      transform: scaleX(1);
     }
   }
 }
